avoid zooming on input field on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ p {
 }
 input[type=number] {
 	color: #fff;
+	font-size: 16px; /* avoid safari zoom on focus */
 	font-family:'Roboto', sans-serif;
 	background-color: #000;
 	border: 1px solid #fff;
